app/assets/stylesheets/pages.scss
// Place all the styles related to the pages controller here.
// They will automatically be included in application.css.
// You can use Sass (SCSS) here: http://sass-lang.com/
html,
body {
  height: 100%;
}

  
h2,
h3,
div {
  text-align: center;
}

h2 {
  margin: 0 0;
  padding: 0.5%;
}

h4 {
  text-align: left;
  padding: 0.5%;
}

ul { 
  margin: auto 0px;
}

li {
  a {
    display: inline-block;
    text-decoration: none;
    color: black;
  }
  a:hover {
    text-decoration: underline;
  }
  text-align: left;
}

.tools,
.about_me {
  padding: 0.5%;
  margin: 0% 15% 0% 15%;
  width: 70%;
   
}

.about_me {
  border-top: 2.5px ridge gray; 
  height: 35%;
  p {
    width: 80%;
    margin-right: 10%;
    margin-left: 10%;
  }
}

.tools {
  height: 25%;
  margin-top: 0px;
  #dev_tools,
  #testing_tools,
  #research {
    display: inline-block;
    width: 25%;
    height: 80%;
    margin-left: 5%;
    h4 {
      margin-bottom: 5%;
    }
  }

  #dev_tools {
    float: left;
  }
  #testing_tools {
    float: middle;
  }  
  #research {
    float: right;
  } 
}

.projects {
  padding: 0.5%;
  width: 70%;
  height: 15%;
  border-top: 2.5px ridge gray;
  margin: 0% 15% 0% 15%;
  .deployed {
    width: 30%;
    height: 100%;
    float: left;
    margin-left: 20%;
  }
  .coming_soon {
    width: 40%;
    height: 100%;
    float: right;
    margin-left: 10%;
  }

  h4 {
    margin-left: 5%;
    margin-top: 0%;
    margin-bottom: 2.5%;
    margin-right: 0%;
  }
}

